# Collective-Intelligence-Library

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXTENDING.md  Manifesto.md  README.md  Start_Here.md  USER_STORY.md  Untitled.ipynb  _init__.py  app.py  edit_graph_demo.py  package.json  pyproject.toml  requirements.txt  run_farmers_market.py  run_sweep.sh  setup.sh  slurm_job.sh  test_graph_helpers.py
.claude/: CURRENT_PLAN.md  KANBAN.md  SESSION_LOG.md  settings.local.json
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
changelogs/: 2026-03-30_composition-operators.md  2026-03-30_core-primitives.tex  2026-03-30_fishing-commons-state.md  2026-03-30_pipeline-compiler.md  2026-03-30_pytree-fix.md  2026-03-30_schedule-primitive.md  2026-03-30_transform-decorator.md  README.md
core/: __init__.py  agents.py  category.py  environment.py  graph.py  pipeline.py  property.py  schedule.py  scheduler.py  simulation.py  time.py
docs/: ARCHITECTURE.md  COMPUTATIONAL_FOUNDATION.md  CORE_ABSTRACTIONS.md  DESIGN_PATTERNS.md  EXTERNAL_API.md  HETEROGENEOUS_NODES.md  PADDED_MATRIX_IMPLEMENTATION.md
examples/: capacity_demo.py  clean_architecture_demo.py  visual_graph_editor.py
execution/: analysis.py  call.py  config.py  engine.py  results.py  run_experiment.py  runner.py  worker.py
experiments/: README.md  analysis.py  experiment_config.py  results.py  run_portfolio_experiment.py  runner.py  worker.py
lib/: main.py  quick_run.py  registry.py
main/: run_portfolio_simulation.py
mechanisms/: democracy.py  market.py  network.py
(+270 files in other folders)
